# BorealisTech

./: .gitignore  Makefile  README.md  final
BorealisTech/: Makefile
BorealisTech/include/borealistech/core/: asset.hpp  camera.hpp  engine.hpp  renderer.hpp
BorealisTech/src/: asset.cpp  camera.cpp  engine.cpp  shaderloader.cpp
BorealisTech/src/core/: main.cpp  renderer.cpp
BorealisTech/src/utils/: objloader.cpp
Impetus/: CMakeLists.txt  Makefile
Impetus/assets/cube/: cube.dae
Impetus/assets/skeleton/: skeleton.mtl
Impetus/assets/triangle/: triangle.frag
Impetus/examples/: main.cpp
Impetus/ext/glad/: CMakeLists.txt  glad.h
Impetus/ext/glad/src/: Makefile  glad.c
Impetus/include/core/: Application.h  GameObject.h
Impetus/include/glad/: glad.h
Impetus/include/impetus/core/: asset.hpp  camera.h  camera.hpp  engine.hpp  renderer.hpp
Impetus/include/impetus/utils/: objloader.hpp  shaderloader.hpp
Impetus/src/: asset.cpp  camera.cpp  engine.cpp  glad.c  main.cpp  objloader.cpp  renderer.cpp  shaderloader.cpp
Impetus/src/core/: Application.cpp  GameObject.cpp
Impetus/tmp/: main.cpp
core/: Makefile  a.out  main.cpp  main.h
graphics/: Makefile  fragment.shader  render.cpp  render.hpp  shaders.cpp  vertex.shader
include/glad/: glad.h
src/: glad.c
